# python-template

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TEMPLATE_README.md  copier.yml  logger.py  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  dockerfile-lint.yml  python-ci.yml
project/: .copier-answers.yml.jinja  .pre-commit-config.yaml  Dockerfile.jinja  Makefile  README.md.jinja  compose.yaml  logger.py  main.py  pyproject.toml.jinja
project/.github/workflows/: dockerfile-lint.yml
project/tests/: test_main.py
tests/: __init__.py  test_main.py
