[project]
name = "python-project-template-for-cloud-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "google-cloud-logging>=3.11.4",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
    "pytest>=8.3.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0"
]

[tool.ruff.lint]
select = [
    "ALL"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # assert

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "tests",
]
asyncio_mode = "auto"