[project]
name = "python-project-template-for-cloud-run"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "google-cloud-logging>=3.11.4",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
    "pytest>=8.3.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "ty>=0.0.21",
]

[[tool.uv.index]]
url = "https://pypi.flatt.tech/simple/"
default = true

[tool.uv]
exclude-newer = "1 week"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    # Avoid conflicts
    "D203",  # incorrect-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "COM812" # missing-trailing-comma
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]         # assert
"project/tests/**" = ["S101"] # assert
"project/*.py" = ["INP001"]   # not a package in the template repo context

[tool.pytest.ini_options]
pythonpath = ["project"]
testpaths = [
    "project/tests",
]
asyncio_mode = "auto"
